--- a/portfolio/mobile.css
+++ b/portfolio/mobile.css
@@ -35,6 +35,7 @@
         background-color: #fff;
         position: absolute;
         width: 100%;
+        height: 100%;
         top: 0px;
         left: 0px;
         transform: translateX(-100%);
