--- a/portfolio/mobile.css
+++ b/portfolio/mobile.css
@@ -1,7 +1,57 @@
+
+@media screen and (min-width: 1280px){
+    nav.link {
+        background-color: #1b1d20;
+        display: flex;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    li.menu-item {
+        list-style: none;
+        cursor: pointer;
+        padding: 15px;
+    }
+
+    li.menu-item:hover {
+        background-color: #b7af27;
+    }
+
+    ul#menu {
+        display: flex;
+        margin-right: 160px ;
+    }
+    a.bntMenu.btnMenu_open {
+        display: none;
+    }
+    li.btnMenu.btnMenu_close {
+        display: none;
+    }
+    a.scroll , .scroll1 , .scroll2, .scroll3, .scroll4 {
+        color: #fff;
+        text-decoration: none;
+        font-size: 20px;
+        padding: 0px 20px;
+    }
+
+}
+
+
+
+
 @media screen and (max-width: 600px){
     * {
         margin: 0px;
         padding: 0px;
+    }
+
+    nav.link {
+        background-color: #1b1d20;
+        display: flex;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
     }
     .btnMenu_open {
         display: block;
@@ -45,6 +95,7 @@
         transform: translateX(0%);
         height: 100%;
     }
+    
 
     
 
